--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,14 @@ processResources {
 dependencies {
   compile 'org.spigotmc:spigot-api:1.17.1-R0.1-SNAPSHOT'
   compile 'org.bstats:bstats-bukkit:2.2.1'
-  compile 'org.dynmap:DynmapCoreAPI:1.9.4'
+//  compile 'org.dynmap:dynmap-api:3.1-beta-2'
+  compileOnly files("${projectDir}/lib/Dynmap-3.2-beta-2-spigot.jar")
 }
 
 repositories {
   mavenCentral()
   maven { url 'https://hub.spigotmc.org/nexus/content/groups/public/' }
-  maven { url 'http://repo.mikeprimm.com/' }
+  maven { url 'https://repo.mikeprimm.com/' }
 }
 
 shadowJar {
